# rust-cookbook

./: .gitignore  README.md
allinone/: 404.html  Cargo.toml  f6.txt
allinone/src/: aes.rs  aes2.rs  aes3.rs  aes4.rs  async_block.rs  async_c1.rs  async_no_block.rs  async_no_block1.rs  base64.rs  c1.rs  c2.rs  c3.rs  c4.rs  c5.rs  client_iter1.rs  client_iter2.rs  client_iter3.rs  clone.rs  cmdargs.rs  config.rs  config2.rs  config3.rs  control.rs  crate_mod.rs  defer.rs  dynx.rs  encrypt.rs  encrypt2.rs  errors_handle.rs  foobar.rs  generics.rs  hashmap.rs  hmac.rs  hmac2.rs  impl_trait.rs  inherit.rs  interface.rs  json_string.rs  jwt.rs  lib.rs  (+18 more)
allinone/src/actixweb/: request.rs  request2.rs
allinone/src/async_send/: c1.rs
allinone/src/channel_compare_tokio_std/: future_channel.rs  mod.rs  std_channel1.rs  tokio_channel1.rs
allinone/src/closure_futures_async_await/: mod.rs  p1.rs  p2.rs  p3.rs  p4.rs  p5.rs
allinone/src/concurrence_parallel_goAndRust/: c1.rs  c2.rs  mod.rs  readme.md  refresher.go
allinone/src/cooking_with_rust/concurrency/: create_a_parallel_pipeline.rs  mod.rs  spawn_a_shortlived_thread.rs
allinone/src/course_rs/: comm.rs  mod.rs
allinone/src/course_rs/advance/: c1.rs
allinone/src/course_rs/async_await/: c1.rs  c2.rs  c3.rs  c4.rs  mod.rs
allinone/src/course_rs/closure_iterate/: c1.rs
allinone/src/course_rs/collections/: c1.rs  c2.rs
allinone/src/course_rs/complex_type/: arrayx.rs  enumeration.rs  enumeration_more_concise.rs  mod.rs  optionx.rs  string_allinone.rs  structx.rs
allinone/src/course_rs/deep_type/: c1.rs  c2.rs  c3.rs  mod.rs
allinone/src/course_rs/error_handle/: c1.rs  c2.rs  c3.rs
allinone/src/course_rs/flow_control/: iflese.rs  matchx.rs  mod.rs
allinone/src/course_rs/generic_trait/: c1.rs  c2.rs  c3.rs  c4.rs  c5.rs  c6.rs  c7.rs  c8.rs  mod.rs
allinone/src/course_rs/life_cycle/: c1.rs  c2.rs  c3.rs  c4.rs
allinone/src/course_rs/mutil_threads/: c1.rs  c10.rs  c11.rs  c12.rs  c13.rs  c14.rs  c15.rs  c16.rs  c17.rs  c2.rs  c3.rs  c4.rs  c5.rs  c6.rs  c7.rs  (+3 more)
allinone/src/data_structures_algorithms/: mod.rs
allinone/src/fealess_concurrency/: listing_16_12.rs  listing_16_13.rs  mod.rs
allinone/src/feature/: arc_sample.rs  mod.rs  rc_arc.rs
allinone/src/futures_sample/: c1.rs
allinone/src/go_src/: breadth_first_search.go  graph.go
allinone/src/microsoft_guide/: car.rs  error_handle.rs  error_handle_result.rs  generic.rs  genric2.rs  iterator.rs  iterator2.rs  loop_return.rs  mod.rs  ownship.rs  ownship_borrow.rs  package_crate_mod_guide.rs  trait_case.rs  trait_case2.rs  unit_test.rs
allinone/src/oop/: c1.rs  circle.rs  comm.rs  mod.rs  single_struct_circle.rs  square.rs
allinone/src/rust_design_patterns/: mod.rs
allinone/src/structx/: c1.rs
allinone/src/thread/: c1.rs  c2.rs  c3.rs  mod.rs  thread_async_channel.rs  thread_comiunica_channel.rs  thread_comiunica_channel2.rs  thread_notify.rs  thread_share_memory.rs  thread_share_memory_heap.rs  thread_sync_channel.rs
allinone/src/tokio_my/: c1.rs  c2.rs
allinone/src/tokio_myx/: c1.rs  c10.rs  c11.rs  c12.rs  c13.rs  c14.rs  c15.rs  c16.rs  c17.rs  c18.rs  c19.rs  c2.rs  c3.rs  c4.rs  c5.rs  c6.rs  c7.rs  c8.rs  c9.rs  mod.rs
allinone/tests/: consul_kv_test.rs  get_ipaddrss_test.rs  option_unwrap.rs  option_unwrap_wenhao.rs  test_lib.rs
blockchain/: Cargo.toml
blockchain/src/: block.rs  blockchain.rs  cli.rs  main.rs  server.rs  transaction.rs  wallets.rs
blockchain/tests/: crypto.rs
design_patterns/: Cargo.toml  use_scene.md
design_patterns/adapter/: Cargo.toml
design_patterns/factory/go/: c1.go  c2.go
design_patterns/src/: chain_of_responsibility.rs  filter.rs  iterator.rs  main.rs  singleton.rs
design_patterns/src/adapter/: c1.rs
design_patterns/src/bridge/: c1.rs
design_patterns/src/builder/: c1.rs
design_patterns/src/command/: c1.rs
design_patterns/src/composite/: c1.rs
design_patterns/src/decorator/: c1.rs
design_patterns/src/facade/: c1.rs
design_patterns/src/factory/: c1.rs  c2.rs
design_patterns/src/filter/: c1.rs
design_patterns/src/flyweight/: c1.rs
design_patterns/src/interpreter/: c1.rs
design_patterns/src/iterator/: c1.rs  c2.rs
design_patterns/src/mediator/: c1.rs
design_patterns/src/memento/: c1.rs
design_patterns/src/observer/: readme.md
design_patterns/src/prototype/: c1.rs
design_patterns/src/proxy/: c1.rs
design_patterns/src/singleton/: c1.rs  c2.rs
design_patterns/src/state/: c1.rs
design_patterns/src/template/: c1.rs
design_patterns/src/visitor/: c1.rs
design_patterns_old/factory/: Cargo.toml
design_patterns_old/factory/src/: main.rs
helloworld-tonic/: Cargo.toml  build.rs
helloworld-tonic/gosrc/: client.go
helloworld-tonic/proto/: helloworld.pb.go  helloworld.proto
helloworld-tonic/src/: client.rs  server.rs
porust/: Cargo.toml  build.rs
porust/examples/: readme.md
porust/examples/client/: Cargo.toml
porust/examples/goclient/: client.go
porust/examples/server/: Cargo.toml
porust/src/: client.rs  comm.rs  config.rs  inherit.py  inherit.rs  inherit2  inherit2.rs  lib.rs  main.rs  reg.rs  server.rs
porust/src/svc/: mod.rs  rds.rs
porust/tests/: c1.rs
rust_plan/: Cargo.toml  readme.md
rust_plan/doc/: multi_thread_shared_and_mut.md
rust_plan/examples/: echo_client.rs
rust_plan/src/: lib.rs  main.rs
rust_plan/src/basic/: advance.rs  advance2.rs  advance3.rs  mod.rs  phase1_ownership.rs  phase2_borrowing.rs  phase3_lifetimes.rs
rust_plan/src/basic2/: challenge.rs  challenge2.rs  challenge3.rs  mod.rs  shape.rs
rust_plan/src/basic3/: c1.rs  mod.rs
rusty-journal/: Cargo.toml  test-journal.json
rusty-journal/src/: cli.rs  main.rs  tasks.rs
tokio_tutorial/my-redis/: Cargo.toml
tokio_tutorial/my-redis/example/: channel_sample.rs  echo_client.rs  echo_server.rs  hello_redis.rs  impl_future.rs  impl_future_waker.rs  io_sample.rs  monifiying_branch.rs  myselect.rs  mytest.rs  pure_client.rs  pure_server.rs  select_sample.rs  streams.rs  tokio_no_async.rs
tokio_tutorial/my-redis/src/: c2.rs  lib.rs  main.rs  mutex_counter.rs
(+217 files in other folders)
