[package]
name = "allinone"
version = "0.1.0"
authors = ["r0x <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consul-rs = {git = "https://github.com/liyiheng/consul-rs", branch = "master"}
#local-ip = "0.1"
local_ipaddress = "0.1.3"
serde = "1.0.117"
lazy_static = "1.4.0"
futures = "0.3.4"

#mysql = "*"
#json支持(必须)
#serde_json = "1.0"
#日期支持(必须)
#chrono = { version = "0.4", features = ["serde"] }
#log日志支持(必须)
#log = "0.4"
#fast_log="1.3"
#BigDecimal支持(可选)
#bigdecimal = "0.2"
#rbatis支持
#rbatis =  { version = "1.8" }

#[dependencies.sqlx-core]
#version = "0.5.1"
#features = ["all-types", "runtime-async-std-rustls"]
#optional = true

