[package]
name = "allinone"
version = "0.1.0"
authors = ["r0x <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consul-rs = {git = "https://github.com/liyiheng/consul-rs", branch = "master"}
#local-ip = "0.1"
local_ipaddress = "0.1.3"
serde = "1.0.117"
lazy_static = "1.4.0"
futures = "0.3.4"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.14"
simplelog = "0.10.0"
#rand = "0.7.3"
#rustc-serialize = "0.3"
base64 = "0.13.0"
#aes = "0.7.2"
block-modes = "0.8.1"
hex-literal = "0.3.1"
#crypto = "0.2.0"
#rust-crypto = "^0.2"
#rand = "0.8.3"
libc = "^0.2"
time = "^0.1"
rand = "^0.3"
rustc-serialize = "^0.3"
hmac = "0.6.2"
#hmac = "0.11.0"
#sha2 = "0.9.5"
sha2 = "0.7.1"
hex = "0.4.3"
#rocket = "0.4.9"
#rocket = "0.3.6"
#rocket_codegen = "0.3.6"

#openssl = "0.9.24"
#hex = "0.3.1"
#otpauth = "0.2.7"
#time = "0.1.40"

#mysql = "*"
#json支持(必须)
#serde_json = "1.0"
#日期支持(必须)
#chrono = { version = "0.4", features = ["serde"] }
#log日志支持(必须)
#log = "0.4"
#fast_log="1.3"
#BigDecimal支持(可选)
#bigdecimal = "0.2"
#rbatis支持
#rbatis =  { version = "1.8" }

#[dependencies.sqlx-core]
#version = "0.5.1"
#features = ["all-types", "runtime-async-std-rustls"]
#optional = true

#[[bin]]
# run:  cargo run --bin pors-server
#name = "rocket"
#path = "src/rocket_main.rs"


