[package]
name = "blockchain"
version = "0.1.0"
authors = ["r0x <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-hasher = "2.2.1"
sha2 = "0.9"
#rust-crypto = "^0.2"
blake2 = "0.9"
bincode = "1.3"
failure = "0.1"
#digest = "0.9"
#sha2-asm = { version = "0.6.1", optional = true }
serde = {version ="1.0", features =["derive"]}
log = "0.4"
env_logger = "0.7.1"
clap = "~2.33"
sled = "0.34"


