[package]
name = "design_patterns"
version = "0.1.0"
authors = ["mm jxx <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# run:  cargo run --bin factory_c1
name = "factory_c1"
path = "src/factory/c1.rs"

[[bin]]
name = "factory_c2"
path = "src/factory/c2.rs"

[[bin]]
name = "singleton_c1"
path = "src/singleton/c1.rs"

[[bin]]
name = "singleton_c2"
path = "src/singleton/c2.rs"


[dependencies]






