[package]
name = "porust"
version = "0.1.0"
authors = ["mm jxx <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# run:  cargo run --bin pors-server
name = "pors-server"
path = "src/server.rs"

[[bin]]
# run: cargo run --bin pors-client
name = "pors-client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"
consul-rs = {git = "https://github.com/liyiheng/consul-rs", branch = "master"}

[build-dependencies]
tonic-build = "0.3"

#[profile.dev]
#codegen-units = 4

# todo: 把文件放进项目的动态装载中, 加上去之后， examples/server文件夹的源码在本项目也可以装载识别，不用另起项目
[workspace]
members = [".", "examples/server", "examples/client"]



