[package]
name = "rust_plan"
version = "0.1.0"
edition = "2024"

[dependencies]
#tokio = "1.45.1"
#tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio = { version = "1.45.1", features = ["full"] }



[[example]]
name = "echo_client"
path = "examples/echo_client.rs"

