[package]
name = "my-redis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
tokio-stream = "0.1"
futures = "0.3.4"


[[example]]
name = "hello-redis"
path = "example/hello_redis.rs"

[[example]]
name = "channel_sample"
path = "example/channel_sample.rs"

[[example]]
name = "io_sample"
path = "example/io_sample.rs"

[[example]]
name = "impl_future"
path = "example/impl_future.rs"

[[example]]
name = "async_future"
path = "example/async_future.rs"

[[example]]
name = "update_waker"
path = "example/impl_future_waker.rs"

[[example]]
name = "select_sample"
path = "example/select_sample.rs"

[[example]]
name = "myselect"
path = "example/myselect.rs"

[[example]]
name = "modify_branch"
path = "example/monifiying_branch.rs"

[[example]]
name = "streams"
path = "example/streams.rs"

[[example]]
name = "mytest"
path = "example/mytest.rs"

[[example]]
name = "tokio_async_sample"
path = "example/tokio_no_async.rs"


[[example]]
name = "echo_client_stream"
path = "example/echo_client_stream.rs"

[[example]]
name = "echo_client"
path = "example/echo_client.rs"

[[example]]
name = "echo_server"
path = "example/echo_server.rs"




