[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[[example]]
name = "move_share_var"
path = "examples/move_share_variable.rs"

[[example]]
name = "hybrid_sync_async"
path = "examples/hybrid_sync_async.rs"

[[example]]
name = "hybrid_sync_async2"
path = "examples/hybrid_sync_async2.rs"


